Fixed alignment

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Jost:wght@200;300;400;700&display=swap");
+@import url('../font/final.css');
+
+body{
+  font-family: "NexaBold" !important;
+  margin: 0;
+  padding: 0;
+}
+
 h1, h2, h3, h4, h5, h6, ul, li, p {
   margin: 0;
   padding: 0; }
@@ -14,7 +21,7 @@ a:hover {
 
 .button {
   position: relative;
-  font: 700 13px 'Jost';
+  font: 700 13px "NexaBold";
   letter-spacing: 1px;
   border: 0;
   border-radius: 5px;
@@ -42,15 +49,19 @@ a:hover {
 .title {
   margin-bottom: 30px; }
   .title h1 {
-    font: 700 38px 'Jost'; }
+    font: 700 38px "NexaBold";
+    text-align: center;
+    margin-bottom: 30px;
+  }
     @media only screen and (max-width: 600px) {
       .title h1 {
         font-size: 30px; } }
   .title p {
     font-size: 18px;
     color: #6F7378;
-    font-weight: 600;
-    line-height: 25px; }
+    font: 600 18px "NexaLight";
+    line-height: 25px;
+  text-align: left; }
     @media only screen and (max-width: 600px) {
       .title p {
         font-size: 15px; } }
@@ -67,7 +78,7 @@ html {
 
 body {
   box-sizing: border-box;
-  font-family: 'Jost', sans-serif;
+   font-family: "NexaBold";
   display: flex;
   flex-direction: column;
   height: 100vh !important; }
@@ -124,20 +135,22 @@ section {
   justify-self: end; }
 
 .nav-item a {
-  color: #000;
-  font: 400 18px 'Jost';
+  color: #47535e;
+  font: 600 18px 'NexaBold';
   text-decoration: none;
   transition: color 0.3s ease-out;
   margin-left: 30px;
   text-transform: capitalize;
-  text-decoration: none !important; }
+  text-decoration: none !important; 
+
+}
   @media only screen and (max-width: 768px) {
     .nav-item a {
       margin-left: 0px; } }
 
 .active, a.active {
   color: #f33074;
-  padding-bottom: 25px;
+  padding-bottom: 27px;
   border-bottom: 2px solid #f33074; }
   @media only screen and (max-width: 768px) {
     .active, a.active {
@@ -380,7 +393,7 @@ header {
           font-size: 32px; } }
 
 .contact-us__address-wrap ul h3 {
-  font: 400 24px 'Jost', sans-serif; }
+  font: 400 24px "NexaBold"; }
 
 .contact-us__address-wrap ul li .circle-round {
   background: #f33074; }
@@ -393,7 +406,7 @@ header {
 .contact-us__address-wrap ul li .wrap {
   margin-left: 15px; }
   .contact-us__address-wrap ul li .wrap h6 {
-    font: 700 22px 'Jost'; }
+    font: 700 22px "NexaBold"; }
   .contact-us__address-wrap ul li .wrap p, .contact-us__address-wrap ul li .wrap a {
     color: #6F7378;
     margin: 0; }
